       * Features one more editing tool per row.
       * Additional brush
       * Button for default zoom switching.
     * Space for a second row of editing tools.
   * Terrain group selection from a menu, saving a lot of space.
   * Terrain palette
     * is scaled to fit at all resolutions.
     * Removed the scrolling feature which is no longer needed.
   * Map label placement tool
 * Graphics:
     * New graphics for the Spectre.
 * Language and i18n:
   * Fixed two untranslatable strings in the "new" MP lobby
   * Fixed an untranslatable string in the Multiplayer Commands help topic
   * New translations: Ukrainian
   * Updated translations: Chinese (Simplified), Dutch, Estonian, Finnish,
     French, Galician, German, Hungarian, Indonesian, Irish, Italian, Korean,
     Latin, Norwegian, Old English, Polish, Portuguese (Brazil), Russian,
     Slovak, Spanish
 * Lua API:
   * Upgraded Lua from 5.1.4 to 5.2.0
   * new: field wesnoth.game_config.mp_debug
   * new: setter for wesnoth.sides[i].color
   * Deprecated the following functions from the wesnoth table,
     all of which have better replacements:
     get_side, get_side_count, get_unit_type_ids, get_unit_type,
     register_wml_action
   * Changed: Extended support for toggle_button.
   * Fixed: wesnoth.find_reach does no longer replace a passed private lua
     proxy unit with the on-map unit at the same location
 * Multiplayer:
   * Fix an accidental terrain type change in Isar's Cross
   * Fix attacker side being human in 6p_Team_Survival (bug #19400)
   * Ignore Pango markup in map descriptions (bug #19210)
   * Canceling the sides setup screen when hosting a MP game now brings the
     host back to the game configuration screen first instead of returning
     immediately to the lobby or (for hotseat) titlescreen (bug #7130)
   * The Set Password action is no longer shown for local hotseat games
     (bug #10784)
   * Changes to the time of day schedules of Fallenstar Lake and Silverhead