@@ -58,6 +58,8 @@ Version 1.11.0-svn:
      * is scaled to fit at all resolutions.
      * Removed the scrolling feature which is no longer needed.
    * Map label placement tool
+ * Engine:
+    *  Fixed bug #19599: Engine keeps redundant unit.ai_special_ information.
  * Graphics:
      * New graphics for the Spectre.
  * Language and i18n:
